--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "daWKTdwBs0I1p73BlXEOM0ooWwAxljcBiKBJDxIhe5pk062UJx",
+  "name": "สถิติหวยหุ้น มีคำตอบ - เว็บใหม่ huay24 2023 ล่าสุด-",
   "theme": "syntax",
   "version": "1.0.4",
   "description": "สถิติหวยหุ้น ทางระบบจะทำการคืนโพยและเครดิตให้ในกรณีที่ตลาดหุ้นไม่มีความเคลื่อนไหวใด ได้แก่ สถิติหวยหุ้น Huay24 หวย24 หวยออนไลน์ มีหวยทุกชนิด ๆ ภายใน 1 ชั่ว",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["สถิติหวยหุ้น","สถิติหวยหุ้น Huay24"],
+  "keywords": [
+    "สถิติหวยหุ้น",
+    "สถิติหวยหุ้น Huay24"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
