--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "สถิติหวยหุ้น มีคำตอบ - เว็บใหม่ huay24 2023 ล่าสุด-",
+  "name": "XXbjHyIuQgX6Rg85lLQnalEDEUnhwT8s9KmBJkAfd8TkVRwOFJ",
   "theme": "syntax",
   "version": "1.0.6",
-  "description": "สถิติหวยหุ้น ทางระบบจะทำการคืนโพยและเครดิตให้ในกรณีที่ตลาดหุ้นไม่มีความเคลื่อนไหวใด ได้แก่ สถิติหวยหุ้น Huay24 หวย24 หวยออนไลน์ มีหวยทุกชนิด ๆ ภายใน 1 ชั่ว",
+  "description": "หวย พา รวย888 เมื่อวันที่ เนื่องด้วย หวย พา รวย888 ที่ Mawinbet เว็บหวยออนไลน์ อันดับหนึ่ง 30165 มีข่าวรายงานว่าบริเวรศาลเก่า พ่อปู่ศรีสุทโธ แม่ย่าศรีปทุม ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "สถิติหวยหุ้น",
-    "สถิติหวยหุ้น Huay24"
-  ],
+  "keywords": ["หวย พา รวย888","หวย","พา","รวย888","หวย Mawinbet","พา Mawinbet","รวย888 Mawinbet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
