--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "XXbjHyIuQgX6Rg85lLQnalEDEUnhwT8s9KmBJkAfd8TkVRwOFJ",
   "theme": "syntax",
   "version": "1.0.6",
-  "description": "หวย พา รวย888 เมื่อวันที่ เนื่องด้วย หวย พา รวย888 ที่ Mawinbet เว็บหวยออนไลน์ อันดับหนึ่ง 30165 มีข่าวรายงานว่าบริเวรศาลเก่า พ่อปู่ศรีสุทโธ แม่ย่าศรีปทุม ",
+  "description": "วิธี สมัคร หวยยี่กี ถ้าคุณอยากจะเป็นผู้ชนะ หากว่า วิธี สมัคร หวยยี่กี Mawinbet มาวินเบท หวยออนไลน์ มีหวยทุกชนิด แนะนำให้เข้ามาเล่นเกมกับเว็บไซต์มาวินคาสิโน",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["หวย พา รวย888","หวย","พา","รวย888","หวย Mawinbet","พา Mawinbet","รวย888 Mawinbet"],
+  "keywords": ["วิธี สมัคร หวยยี่กี","วิธี","สมัคร","หวยยี่กี","วิธี Mawinbet","สมัคร Mawinbet","หวยยี่กี Mawinbet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
