Renaming uOJRDmVDu5CNc2QEmokgf5j5TMCMRLIva2ZkOKDgJ879Eax52b to วิธี สมัคร หวยยี่กี ที่ไหน - เว็บใหม่ mawinbet 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "uOJRDmVDu5CNc2QEmokgf5j5TMCMRLIva2ZkOKDgJ879Eax52b",
+  "name": "วิธี สมัคร หวยยี่กี ที่ไหน - เว็บใหม่ mawinbet 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.7",
   "description": "วิธี สมัคร หวยยี่กี ถ้าคุณอยากจะเป็นผู้ชนะ หากว่า วิธี สมัคร หวยยี่กี Mawinbet มาวินเบท หวยออนไลน์ มีหวยทุกชนิด แนะนำให้เข้ามาเล่นเกมกับเว็บไซต์มาวินคาสิโน",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["วิธี สมัคร หวยยี่กี","วิธี","สมัคร","หวยยี่กี","วิธี Mawinbet","สมัคร Mawinbet","หวยยี่กี Mawinbet"],
+  "keywords": [
+    "วิธี สมัคร หวยยี่กี",
+    "วิธี",
+    "สมัคร",
+    "หวยยี่กี",
+    "วิธี Mawinbet",
+    "สมัคร Mawinbet",
+    "หวยยี่กี Mawinbet"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
