--- a/package.json
+++ b/package.json
@@ -1,18 +1,10 @@
 {
-  "name": "วิธี สมัคร หวยยี่กี ที่ไหน - เว็บใหม่ mawinbet 2023 ล่าสุด",
+  "name": "tlPHY8oeUVDc3jEMd0fqCRfjACIB58Ru1KkgXXqhRfVb8CegyM",
   "theme": "syntax",
   "version": "1.0.8",
-  "description": "วิธี สมัคร หวยยี่กี ถ้าคุณอยากจะเป็นผู้ชนะ หากว่า วิธี สมัคร หวยยี่กี Mawinbet มาวินเบท หวยออนไลน์ มีหวยทุกชนิด แนะนำให้เข้ามาเล่นเกมกับเว็บไซต์มาวินคาสิโน",
+  "description": "chock หวยไทยรัฐ และ chock ที่ Cat888 เว็บหวยออนไลน์ อันดับหนึ่ง เป็นชุดตารางเลขเด่นผลงานดีที่ทางเว็บไซต์หวยไทยของเรานำเสนอมาทุกงวด ในงวดนี้เราขอนำเสนออีกหน",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "วิธี สมัคร หวยยี่กี",
-    "วิธี",
-    "สมัคร",
-    "หวยยี่กี",
-    "วิธี Mawinbet",
-    "สมัคร Mawinbet",
-    "หวยยี่กี Mawinbet"
-  ],
+  "keywords": ["CHOCK","CHOCK Cat888"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
