--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "chock ดูยังไง - เว็บใหม่ cat888 2023 ล่าสุด-",
+  "name": "vGmONzyvX1sq6LnqHXYznRNju9XRtTCmwMwXNAdcOpXsJimQij",
   "theme": "syntax",
   "version": "1.0.12",
-  "description": "chock หวยไทยรัฐ และ chock ที่ Cat888 เว็บหวยออนไลน์ อันดับหนึ่ง เป็นชุดตารางเลขเด่นผลงานดีที่ทางเว็บไซต์หวยไทยของเรานำเสนอมาทุกงวด ในงวดนี้เราขอนำเสนออีกหน",
+  "description": "Doglotto ดีไหม สำหรับเหล่าคอหวยท่านใดที่กำลังตามหาแนวทางเลขเด็ดแม่นๆเพื่อนำไปใช้ในการ แด่ Doglotto ดีไหม ที่ Huaylike เว็บหวยออนไลน์ อันดับหนึ่ง แทงหวยหุ้น",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "CHOCK",
-    "CHOCK Cat888"
-  ],
+  "keywords": ["DOGLOTTO ดีไหม","DOGLOTTO","ดีไหม","DOGLOTTO Huaylike","ดีไหม Huaylike"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
