--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "doglotto ดีไหม คืออะไร - เว็บใหม่ huaylike 2023 ล่าสุด-",
+  "name": "jcwBpEmKIjPksNaPEGrapUP7QK1jvNzWXo4gIlpJ20F0N76FZs",
   "theme": "syntax",
   "version": "1.0.15",
-  "description": "Doglotto ดีไหม สำหรับเหล่าคอหวยท่านใดที่กำลังตามหาแนวทางเลขเด็ดแม่นๆเพื่อนำไปใช้ในการ แด่ Doglotto ดีไหม ที่ Huaylike เว็บหวยออนไลน์ อันดับหนึ่ง แทงหวยหุ้น",
+  "description": "เล่นพนัน ยัง ไง ให้รวย เกม อย่างไรก็ตาม เล่นพนัน ยัง ไง ให้รวย ที่ PGSlot เว็บพนัน มีเกมพนันทุกชนิด Wild Bandito มีสัญลักษณ์ Scatter เป็นรูปหัวกะโหลก 3 อัน",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "DOGLOTTO ดีไหม",
-    "DOGLOTTO",
-    "ดีไหม",
-    "DOGLOTTO Huaylike",
-    "ดีไหม Huaylike"
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
