Renaming tx7zmwVHmNHjE9pwEan6HxT656IM6Bp7HzKp9oFuLCh0g5ljUt to เล่นพนัน ยัง ไง ให้รวย ดูยังไง - เว็บใหม่ pgslot 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "tx7zmwVHmNHjE9pwEan6HxT656IM6Bp7HzKp9oFuLCh0g5ljUt",
+  "name": "เล่นพนัน ยัง ไง ให้รวย ดูยังไง - เว็บใหม่ pgslot 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.15",
   "description": "เล่นพนัน ยัง ไง ให้รวย เกม อย่างไรก็ตาม เล่นพนัน ยัง ไง ให้รวย ที่ PGSlot เว็บพนัน มีเกมพนันทุกชนิด Wild Bandito มีสัญลักษณ์ Scatter เป็นรูปหัวกะโหลก 3 อัน",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [null],
+  "keywords": [
+    null
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
