--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "เล่นพนัน ยัง ไง ให้รวย ดูยังไง - เว็บใหม่ pgslot 2023 ล่าสุด",
+  "name": "F3PoD72FqdMXpAhTpNF3ZTilCUx3YMyzOo5GpH51xptuyfAmlz",
   "theme": "syntax",
   "version": "1.0.16",
-  "description": "เล่นพนัน ยัง ไง ให้รวย เกม อย่างไรก็ตาม เล่นพนัน ยัง ไง ให้รวย ที่ PGSlot เว็บพนัน มีเกมพนันทุกชนิด Wild Bandito มีสัญลักษณ์ Scatter เป็นรูปหัวกะโหลก 3 อัน",
+  "description": "12bet mobile เชื่อเถอะว่า กับ 12bet mobile Dafabet เว็บพนันออนไลน์ อันดับหนึ่ง 12bet mobile สล็อตหน้าหมีVip เกม สล็อตทั้งหมด นั้นเป็นเกมที่แตกได้ง่ายๆและได",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    null
-  ],
+  "keywords": ["12BET MOBILE","12BET","MOBILE","12BET Dafabet","MOBILE Dafabet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
