--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "12bet mobile ที่ไหน - เว็บใหม่ dafabet 2023 ล่าสุด",
+  "name": "F3PoD72FqdMXpAhTpNF3ZTilCUx3YMyzOo5GpH51xptuyfAmlz",
   "theme": "syntax",
   "version": "1.0.17",
-  "description": "12bet mobile เชื่อเถอะว่า กับ 12bet mobile Dafabet เว็บพนันออนไลน์ อันดับหนึ่ง 12bet mobile สล็อตหน้าหมีVip เกม สล็อตทั้งหมด นั้นเป็นเกมที่แตกได้ง่ายๆและได",
+  "description": "หวยออนไลน์ บาทละ 95 หวยลาว ใน หวยออนไลน์ บาทละ 95 Mawinbet หวยออนไลน์ อันดับหนึ่ง หากใครได้ยินชื่อนี้ก็คงจะต้องรีบไปหาเลขเพื่อแทงเลขเด็ดกันแล้ว เพราะว่าหวย",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "12BET MOBILE",
-    "12BET",
-    "MOBILE",
-    "12BET Dafabet",
-    "MOBILE Dafabet"
-  ],
+  "keywords": ["หวยออนไลน์ บาทละ 95","หวยออนไลน์","บาทละ","95","หวยออนไลน์ Mawinbet","บาทละ Mawinbet","95 Mawinbet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
