Renaming Gma0Jn1mNg5GSHo5HWxhqjk8FN3XazHZBn7eqqWJn5BGGdU0HG to หวยออนไลน์ บาทละ 95 เลือกยังไง - เว็บใหม่ mawinbet 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "Gma0Jn1mNg5GSHo5HWxhqjk8FN3XazHZBn7eqqWJn5BGGdU0HG",
+  "name": "หวยออนไลน์ บาทละ 95 เลือกยังไง - เว็บใหม่ mawinbet 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.17",
   "description": "หวยออนไลน์ บาทละ 95 หวยลาว ใน หวยออนไลน์ บาทละ 95 Mawinbet หวยออนไลน์ อันดับหนึ่ง หากใครได้ยินชื่อนี้ก็คงจะต้องรีบไปหาเลขเพื่อแทงเลขเด็ดกันแล้ว เพราะว่าหวย",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["หวยออนไลน์ บาทละ 95","หวยออนไลน์","บาทละ","95","หวยออนไลน์ Mawinbet","บาทละ Mawinbet","95 Mawinbet"],
+  "keywords": [
+    "หวยออนไลน์ บาทละ 95",
+    "หวยออนไลน์",
+    "บาทละ",
+    "95",
+    "หวยออนไลน์ Mawinbet",
+    "บาทละ Mawinbet",
+    "95 Mawinbet"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
