--- a/package.json
+++ b/package.json
@@ -1,18 +1,10 @@
 {
-  "name": "หวยออนไลน์ บาทละ 95 เลือกยังไง - เว็บใหม่ mawinbet 2023 ล่าสุด",
+  "name": "6GN8wFaEs5n1cLEwse2XmEAqz1of2oVcbO6PZ8D1szucsKKUE8",
   "theme": "syntax",
   "version": "1.0.18",
-  "description": "หวยออนไลน์ บาทละ 95 หวยลาว ใน หวยออนไลน์ บาทละ 95 Mawinbet หวยออนไลน์ อันดับหนึ่ง หากใครได้ยินชื่อนี้ก็คงจะต้องรีบไปหาเลขเพื่อแทงเลขเด็ดกันแล้ว เพราะว่าหวย",
+  "description": "lto bet เข้าสู่ระบบ หวยหุ้นไทย ของ lto bet เข้าสู่ระบบ ที่ Lotto เว็บหวยออนไลน์ อันดับหนึ่ง ที่ผลรางวัลจะวัดจากการปิดตลาดหลักทรัพย์ หรือ ตลาดหุ้นของประเทศไ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "หวยออนไลน์ บาทละ 95",
-    "หวยออนไลน์",
-    "บาทละ",
-    "95",
-    "หวยออนไลน์ Mawinbet",
-    "บาทละ Mawinbet",
-    "95 Mawinbet"
-  ],
+  "keywords": ["LTO BET เข้าสู่ระบบ","LTO","BET","เข้าสู่ระบบ","LTO Lotto","BET Lotto","เข้าสู่ระบบ Lotto"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
