--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "6GN8wFaEs5n1cLEwse2XmEAqz1of2oVcbO6PZ8D1szucsKKUE8",
+  "name": "lto bet เข้าสู่ระบบ ทำไมถึงนิยม - เว็บใหม่ lotto 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.18",
   "description": "lto bet เข้าสู่ระบบ หวยหุ้นไทย ของ lto bet เข้าสู่ระบบ ที่ Lotto เว็บหวยออนไลน์ อันดับหนึ่ง ที่ผลรางวัลจะวัดจากการปิดตลาดหลักทรัพย์ หรือ ตลาดหุ้นของประเทศไ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["LTO BET เข้าสู่ระบบ","LTO","BET","เข้าสู่ระบบ","LTO Lotto","BET Lotto","เข้าสู่ระบบ Lotto"],
+  "keywords": [
+    "LTO BET เข้าสู่ระบบ",
+    "LTO",
+    "BET",
+    "เข้าสู่ระบบ",
+    "LTO Lotto",
+    "BET Lotto",
+    "เข้าสู่ระบบ Lotto"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
