--- a/package.json
+++ b/package.json
@@ -1,18 +1,10 @@
 {
-  "name": "lto bet เข้าสู่ระบบ ทำไมถึงนิยม - เว็บใหม่ lotto 2023 ล่าสุด",
+  "name": "HxueRlLOk8Wx5GS4BBRtP49D2oxtSezYWBjkGnIIVfFiDN6Kc9",
   "theme": "syntax",
   "version": "1.0.19",
-  "description": "lto bet เข้าสู่ระบบ หวยหุ้นไทย ของ lto bet เข้าสู่ระบบ ที่ Lotto เว็บหวยออนไลน์ อันดับหนึ่ง ที่ผลรางวัลจะวัดจากการปิดตลาดหลักทรัพย์ หรือ ตลาดหุ้นของประเทศไ",
+  "description": "โหลด แอ พ UWIN789 เลขเด็ด เท่ากับ โหลด แอ พ UWIN789 Huaylike หวยไลค์ หวยออนไลน์ มีหวยทุกชนิด ในงวดประจำวันที่ 1 เมษายน 2566 โหลด แอ พ UWIN789 เว็บไซต์หวยไท",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "LTO BET เข้าสู่ระบบ",
-    "LTO",
-    "BET",
-    "เข้าสู่ระบบ",
-    "LTO Lotto",
-    "BET Lotto",
-    "เข้าสู่ระบบ Lotto"
-  ],
+  "keywords": ["โหลด แอ พ UWIN789","โหลด","แอ","พ","UWIN789","โหลด Huaylike","แอ Huaylike","พ Huaylike","UWIN789 Huaylike"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
