--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
-  "name": "xxmD6SJZcCaWLvx2KrJ9oobVQB3ZkIqW2r5PBxqXoREg7XIwxd",
+  "name": "โหลด แอ พ uwin789 คืออะไร - เว็บใหม่ huaylike 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.20",
   "description": "โหลด แอ พ UWIN789 เลขเด็ด เท่ากับ โหลด แอ พ UWIN789 Huaylike หวยไลค์ หวยออนไลน์ มีหวยทุกชนิด ในงวดประจำวันที่ 1 เมษายน 2566 โหลด แอ พ UWIN789 เว็บไซต์หวยไท",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["โหลด แอ พ UWIN789","โหลด","แอ","พ","UWIN789","โหลด Huaylike","แอ Huaylike","พ Huaylike","UWIN789 Huaylike"],
+  "keywords": [
+    "โหลด แอ พ UWIN789",
+    "โหลด",
+    "แอ",
+    "พ",
+    "UWIN789",
+    "โหลด Huaylike",
+    "แอ Huaylike",
+    "พ Huaylike",
+    "UWIN789 Huaylike"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
