--- a/package.json
+++ b/package.json
@@ -1,20 +1,10 @@
 {
-  "name": "โหลด แอ พ uwin789 คืออะไร - เว็บใหม่ huaylike 2023 ล่าสุด",
+  "name": "iy0wVezONEVLdIa3kqcQfUddB8PE5sbzXKtM6E1FdaZmCAP55V",
   "theme": "syntax",
   "version": "1.0.22",
-  "description": "โหลด แอ พ UWIN789 เลขเด็ด เท่ากับ โหลด แอ พ UWIN789 Huaylike หวยไลค์ หวยออนไลน์ มีหวยทุกชนิด ในงวดประจำวันที่ 1 เมษายน 2566 โหลด แอ พ UWIN789 เว็บไซต์หวยไท",
+  "description": "เล่น บา ค่า ร่า ให้ได้เงินทุกวัน Spinix เนื่องด้วย เล่น บา ค่า ร่า ให้ได้เงินทุกวัน ที่ UFA191 เว็บพนัน อันดับหนึ่ง เครดิตฟรี300 เว็บไซต์ เกมสล็อต ที่ขึ้นช",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "โหลด แอ พ UWIN789",
-    "โหลด",
-    "แอ",
-    "พ",
-    "UWIN789",
-    "โหลด Huaylike",
-    "แอ Huaylike",
-    "พ Huaylike",
-    "UWIN789 Huaylike"
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
