--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "iy0wVezONEVLdIa3kqcQfUddB8PE5sbzXKtM6E1FdaZmCAP55V",
+  "name": "เล่น บา ค่า ร่า ให้ได้เงินทุกวัน เลือกยังไง - เว็บใหม่ ufa191 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.22",
   "description": "เล่น บา ค่า ร่า ให้ได้เงินทุกวัน Spinix เนื่องด้วย เล่น บา ค่า ร่า ให้ได้เงินทุกวัน ที่ UFA191 เว็บพนัน อันดับหนึ่ง เครดิตฟรี300 เว็บไซต์ เกมสล็อต ที่ขึ้นช",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [null],
+  "keywords": [
+    null
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
