--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "เล่น บา ค่า ร่า ให้ได้เงินทุกวัน เลือกยังไง - เว็บใหม่ ufa191 2023 ล่าสุด",
+  "name": "7eqGMFxHL4iVmSumV9kHk1osgvP4xe09CoOzhzU6Kdeq7U9SdQ",
   "theme": "syntax",
   "version": "1.0.23",
-  "description": "เล่น บา ค่า ร่า ให้ได้เงินทุกวัน Spinix เนื่องด้วย เล่น บา ค่า ร่า ให้ได้เงินทุกวัน ที่ UFA191 เว็บพนัน อันดับหนึ่ง เครดิตฟรี300 เว็บไซต์ เกมสล็อต ที่ขึ้นช",
+  "description": "เว็บตรงคนเล่นเยอะ สมัครง่ายเพียงใช้มือถือที่เชื่อมต่ออินเทอร์เน็ต สำหรับ เว็บตรงคนเล่นเยอะ ที่ PGSlot เว็บพนัน มีเกมพนันทุกชนิด ทางเข้าเล่น 888prolotto เว็",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    null
-  ],
+  "keywords": ["เว็บตรงคนเล่นเยอะ","เว็บตรงคนเล่นเยอะ PGSlot"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
