Renaming 0LrISS47Mf7gblIadNaAIVQNLlhmsGPEwrWvK7DmyOfFUYdXJU to เว็บตรงคนเล่นเยอะ สมัครยังไง - เว็บใหม่ pgslot 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "0LrISS47Mf7gblIadNaAIVQNLlhmsGPEwrWvK7DmyOfFUYdXJU",
+  "name": "เว็บตรงคนเล่นเยอะ สมัครยังไง - เว็บใหม่ pgslot 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.23",
   "description": "เว็บตรงคนเล่นเยอะ สมัครง่ายเพียงใช้มือถือที่เชื่อมต่ออินเทอร์เน็ต สำหรับ เว็บตรงคนเล่นเยอะ ที่ PGSlot เว็บพนัน มีเกมพนันทุกชนิด ทางเข้าเล่น 888prolotto เว็",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["เว็บตรงคนเล่นเยอะ","เว็บตรงคนเล่นเยอะ PGSlot"],
+  "keywords": [
+    "เว็บตรงคนเล่นเยอะ",
+    "เว็บตรงคนเล่นเยอะ PGSlot"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
