--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "เว็บตรงคนเล่นเยอะ สมัครยังไง - เว็บใหม่ pgslot 2023 ล่าสุด",
+  "name": "9bUPyzR1DKdkeKulCuF7UimIzgQrcRkCnLiDel9n8tmcJXvCyN",
   "theme": "syntax",
   "version": "1.0.24",
-  "description": "เว็บตรงคนเล่นเยอะ สมัครง่ายเพียงใช้มือถือที่เชื่อมต่ออินเทอร์เน็ต สำหรับ เว็บตรงคนเล่นเยอะ ที่ PGSlot เว็บพนัน มีเกมพนันทุกชนิด ทางเข้าเล่น 888prolotto เว็",
+  "description": "where is casper tng from ฟีเจอร์พิเศษของเกมสล็อตอาณาจักรจูราสสิคจะมีอยู่ทั้งหมด บน where is casper tng from ที่ Lynsbobet เว็บพนัน มีเกมพนันทุกชนิด 3 แบบด้",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "เว็บตรงคนเล่นเยอะ",
-    "เว็บตรงคนเล่นเยอะ PGSlot"
-  ],
+  "keywords": ["WHERE IS CASPER TNG FROM","WHERE","IS","CASPER","TNG","FROM","WHERE Lynsbobet","IS Lynsbobet","CASPER Lynsbobet","TNG Lynsbobet","FROM Lynsbobet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
