--- a/package.json
+++ b/package.json
@@ -1,22 +1,10 @@
 {
-  "name": "where is casper tng from มีคำตอบ - เว็บใหม่ lynsbobet 2023 ล่าสุด",
+  "name": "io14fsFDURW4eXfMtNuWMNVNSLTlnBsFoSxknsWYKHbVk4LnQ5",
   "theme": "syntax",
   "version": "1.0.25",
-  "description": "where is casper tng from ฟีเจอร์พิเศษของเกมสล็อตอาณาจักรจูราสสิคจะมีอยู่ทั้งหมด บน where is casper tng from ที่ Lynsbobet เว็บพนัน มีเกมพนันทุกชนิด 3 แบบด้",
+  "description": "ซื้อสลากดิจิทัล ขึ้นเงิน ที่ไหน แพะ หากว่า ซื้อสลากดิจิทัล ขึ้นเงิน ที่ไหน Huay24 หวย24 หวยออนไลน์ มีหวยทุกชนิด 35หวยลาวเลขท้าย 4 ตัว 8408หวยลาวเลข 5 ตัว 7",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "WHERE IS CASPER TNG FROM",
-    "WHERE",
-    "IS",
-    "CASPER",
-    "TNG",
-    "FROM",
-    "WHERE Lynsbobet",
-    "IS Lynsbobet",
-    "CASPER Lynsbobet",
-    "TNG Lynsbobet",
-    "FROM Lynsbobet"
-  ],
+  "keywords": ["ซื้อสลากดิจิทัล ขึ้นเงิน ที่ไหน","ซื้อสลากดิจิทัล","ขึ้นเงิน","ที่ไหน","ซื้อสลากดิจิทัล Huay24","ขึ้นเงิน Huay24","ที่ไหน Huay24"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
