Renaming io14fsFDURW4eXfMtNuWMNVNSLTlnBsFoSxknsWYKHbVk4LnQ5 to ซื้อสลากดิจิทัล ขึ้นเงิน ที่ไหน ที่ไหน - เว็บใหม่ huay24 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "io14fsFDURW4eXfMtNuWMNVNSLTlnBsFoSxknsWYKHbVk4LnQ5",
+  "name": "ซื้อสลากดิจิทัล ขึ้นเงิน ที่ไหน ที่ไหน - เว็บใหม่ huay24 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.25",
   "description": "ซื้อสลากดิจิทัล ขึ้นเงิน ที่ไหน แพะ หากว่า ซื้อสลากดิจิทัล ขึ้นเงิน ที่ไหน Huay24 หวย24 หวยออนไลน์ มีหวยทุกชนิด 35หวยลาวเลขท้าย 4 ตัว 8408หวยลาวเลข 5 ตัว 7",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["ซื้อสลากดิจิทัล ขึ้นเงิน ที่ไหน","ซื้อสลากดิจิทัล","ขึ้นเงิน","ที่ไหน","ซื้อสลากดิจิทัล Huay24","ขึ้นเงิน Huay24","ที่ไหน Huay24"],
+  "keywords": [
+    "ซื้อสลากดิจิทัล ขึ้นเงิน ที่ไหน",
+    "ซื้อสลากดิจิทัล",
+    "ขึ้นเงิน",
+    "ที่ไหน",
+    "ซื้อสลากดิจิทัล Huay24",
+    "ขึ้นเงิน Huay24",
+    "ที่ไหน Huay24"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
