--- a/package.json
+++ b/package.json
@@ -1,18 +1,10 @@
 {
-  "name": "ซื้อสลากดิจิทัล ขึ้นเงิน ที่ไหน ที่ไหน - เว็บใหม่ huay24 2023 ล่าสุด",
+  "name": "Nq8ZjAYa1UvC584Pg1GI02t3X6sqwxGfJn9lkcltorLtmScalk",
   "theme": "syntax",
   "version": "1.0.26",
-  "description": "ซื้อสลากดิจิทัล ขึ้นเงิน ที่ไหน แพะ หากว่า ซื้อสลากดิจิทัล ขึ้นเงิน ที่ไหน Huay24 หวย24 หวยออนไลน์ มีหวยทุกชนิด 35หวยลาวเลขท้าย 4 ตัว 8408หวยลาวเลข 5 ตัว 7",
+  "description": "ตรวจหวย 16 พฤษภาคม 2565 ไทยรัฐ ขั้นตอนการซื้อหวยออนไลน์ บน ตรวจหวย 16 พฤษภาคม 2565 ไทยรัฐ ที่ 77Lotto เว็บหวยออนไลน์ อันดับหนึ่ง ตรวจหวย 16 พฤษภาคม 2565 ไท",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "ซื้อสลากดิจิทัล ขึ้นเงิน ที่ไหน",
-    "ซื้อสลากดิจิทัล",
-    "ขึ้นเงิน",
-    "ที่ไหน",
-    "ซื้อสลากดิจิทัล Huay24",
-    "ขึ้นเงิน Huay24",
-    "ที่ไหน Huay24"
-  ],
+  "keywords": ["ตรวจหวย 16 พฤษภาคม 2565 ไทยรัฐ","ตรวจหวย","16","พฤษภาคม","2565","ไทยรัฐ","ตรวจหวย 77Lotto","16 77Lotto","พฤษภาคม 77Lotto","2565 77Lotto","ไทยรัฐ 77Lotto"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
