--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
-  "name": "8pXqEe6oNQBan9las4qzAK6QDEGZpPHE1sZjhp4IMDHo34EJgy",
+  "name": "ตรวจหวย 16 พฤษภาคม 2565 ไทยรัฐ เล่นที่ไหน - เว็บใหม่ 77lotto 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.26",
   "description": "ตรวจหวย 16 พฤษภาคม 2565 ไทยรัฐ ขั้นตอนการซื้อหวยออนไลน์ บน ตรวจหวย 16 พฤษภาคม 2565 ไทยรัฐ ที่ 77Lotto เว็บหวยออนไลน์ อันดับหนึ่ง ตรวจหวย 16 พฤษภาคม 2565 ไท",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["ตรวจหวย 16 พฤษภาคม 2565 ไทยรัฐ","ตรวจหวย","16","พฤษภาคม","2565","ไทยรัฐ","ตรวจหวย 77Lotto","16 77Lotto","พฤษภาคม 77Lotto","2565 77Lotto","ไทยรัฐ 77Lotto"],
+  "keywords": [
+    "ตรวจหวย 16 พฤษภาคม 2565 ไทยรัฐ",
+    "ตรวจหวย",
+    "16",
+    "พฤษภาคม",
+    "2565",
+    "ไทยรัฐ",
+    "ตรวจหวย 77Lotto",
+    "16 77Lotto",
+    "พฤษภาคม 77Lotto",
+    "2565 77Lotto",
+    "ไทยรัฐ 77Lotto"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
