--- a/package.json
+++ b/package.json
@@ -1,22 +1,10 @@
 {
-  "name": "ตรวจหวย 16 พฤษภาคม 2565 ไทยรัฐ เล่นที่ไหน - เว็บใหม่ 77lotto 2023 ล่าสุด",
+  "name": "7jlyU30iSzCH9yRpzqQOX63U50yeVey2gKHyKDNY2PHyCNHeng",
   "theme": "syntax",
   "version": "1.0.27",
-  "description": "ตรวจหวย 16 พฤษภาคม 2565 ไทยรัฐ ขั้นตอนการซื้อหวยออนไลน์ บน ตรวจหวย 16 พฤษภาคม 2565 ไทยรัฐ ที่ 77Lotto เว็บหวยออนไลน์ อันดับหนึ่ง ตรวจหวย 16 พฤษภาคม 2565 ไท",
+  "description": "betway 02-03-05-0723-25-2735-3757ขอแนะนำให้คอหวยนำชุดเลขดังกล่าวจับหมุนไปกลับก่อนนำไปใช้พิจารณาเป็นแนวทางเลขเด็ดงวดนี้ขอขอบคุณเจ้าของข้อมูล เว้นแต่ betway ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "ตรวจหวย 16 พฤษภาคม 2565 ไทยรัฐ",
-    "ตรวจหวย",
-    "16",
-    "พฤษภาคม",
-    "2565",
-    "ไทยรัฐ",
-    "ตรวจหวย 77Lotto",
-    "16 77Lotto",
-    "พฤษภาคม 77Lotto",
-    "2565 77Lotto",
-    "ไทยรัฐ 77Lotto"
-  ],
+  "keywords": ["BETWAY","BETWAY Uwin789"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
