Renaming CJbk8wKbIzP0kF9TkVvEf66mvxepkloRr4QPtNnrchzSQn5FM1 to betway เล่นที่ไหน - เว็บใหม่ uwin789 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "CJbk8wKbIzP0kF9TkVvEf66mvxepkloRr4QPtNnrchzSQn5FM1",
+  "name": "betway เล่นที่ไหน - เว็บใหม่ uwin789 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.27",
   "description": "betway 02-03-05-0723-25-2735-3757ขอแนะนำให้คอหวยนำชุดเลขดังกล่าวจับหมุนไปกลับก่อนนำไปใช้พิจารณาเป็นแนวทางเลขเด็ดงวดนี้ขอขอบคุณเจ้าของข้อมูล เว้นแต่ betway ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["BETWAY","BETWAY Uwin789"],
+  "keywords": [
+    "BETWAY",
+    "BETWAY Uwin789"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
