--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "betway เล่นที่ไหน - เว็บใหม่ uwin789 2023 ล่าสุด",
+  "name": "Qwzix11RKWnMkKyv77VogVc3gYhobIjyWQQi82lKYhsE7CSjGg",
   "theme": "syntax",
   "version": "1.0.28",
-  "description": "betway 02-03-05-0723-25-2735-3757ขอแนะนำให้คอหวยนำชุดเลขดังกล่าวจับหมุนไปกลับก่อนนำไปใช้พิจารณาเป็นแนวทางเลขเด็ดงวดนี้ขอขอบคุณเจ้าของข้อมูล เว้นแต่ betway ",
+  "description": "รูเล็ตออนไลน์ สัญลักษณ์รางวัลทั่วไปของเกมสล็อต แม้ว่า รูเล็ตออนไลน์ ที่ Winclub88 เว็บพนัน อันดับหนึ่ง Phoenix Rises จะมีอยู่ทั้งหมด 8 แบบ ซึ่งจะแบ่งออกเป็",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "BETWAY",
-    "BETWAY Uwin789"
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
