--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "pvRwnl2HDhEGOxVXlK7lNqCEa7e01vOaYtEvaAqov9O7NrlERe",
   "theme": "syntax",
   "version": "1.0.28",
-  "description": "รูเล็ตออนไลน์ สัญลักษณ์รางวัลทั่วไปของเกมสล็อต แม้ว่า รูเล็ตออนไลน์ ที่ Winclub88 เว็บพนัน อันดับหนึ่ง Phoenix Rises จะมีอยู่ทั้งหมด 8 แบบ ซึ่งจะแบ่งออกเป็",
+  "description": "Lotto432 หวยเจ้าพายุ ต่อ Lotto432 ที่ Ruay เว็บหวยออนไลน์ อันดับหนึ่ง 11065 แนวทางหวยรัฐบาล หวยเด็ดงวดนี้ คุณไก่ วุฒินันท์ สอนศรีเลขเด็ด หวยเจ้าพายุ วันนี้",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [null],
+  "keywords": ["LOTTO432","LOTTO432 Ruay"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
