--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "lotto432 เล่นยังไง - เว็บใหม่ ruay 2023 ล่าสุด",
+  "name": "CcYpIiIA8C9duI0uIQBNmuqxlSz6YhB3Sbvh7XLfNYGfRwe7vp",
   "theme": "syntax",
   "version": "1.0.30",
   "description": "Lotto432 หวยเจ้าพายุ ต่อ Lotto432 ที่ Ruay เว็บหวยออนไลน์ อันดับหนึ่ง 11065 แนวทางหวยรัฐบาล หวยเด็ดงวดนี้ คุณไก่ วุฒินันท์ สอนศรีเลขเด็ด หวยเจ้าพายุ วันนี้",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "LOTTO432",
-    "LOTTO432 Ruay"
-  ],
+  "keywords": ["LOTTO432","LOTTO432 Ruay"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
