--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "lotto432 เล่นยังไง - เว็บใหม่ ruay 2023 ล่าสุด",
+  "name": "y0EGuC05j0O24ZPfkvSpgIYua8daJhBfEy3fSOo7tF7cQM6HHj",
   "theme": "syntax",
   "version": "1.0.31",
-  "description": "Lotto432 หวยเจ้าพายุ ต่อ Lotto432 ที่ Ruay เว็บหวยออนไลน์ อันดับหนึ่ง 11065 แนวทางหวยรัฐบาล หวยเด็ดงวดนี้ คุณไก่ วุฒินันท์ สอนศรีเลขเด็ด หวยเจ้าพายุ วันนี้",
+  "description": "หวยย้อนหลัง20ปี ผลหวยหุ้น ได้แก่ หวยย้อนหลัง20ปี ที่ Masurebet เว็บหวยออนไลน์ อันดับหนึ่ง คือ การนำค่าดัชนี ที่มีตัวเลขนำมาออกผล ในหวยนั้นๆ เช่น นำค่า Set ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "LOTTO432",
-    "LOTTO432 Ruay"
-  ],
+  "keywords": ["หวยย้อนหลัง20ปี","หวยย้อนหลัง20ปี Masurebet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
