--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "หวยย้อนหลัง20ปี ที่ไหน - เว็บใหม่ masurebet 2023 ล่าสุด",
+  "name": "P2UKsjdXeS2pqNvUdBRP7krgV9MrkUwDAD7MfPOR49kRozMRXl",
   "theme": "syntax",
   "version": "1.0.32",
-  "description": "หวยย้อนหลัง20ปี ผลหวยหุ้น ได้แก่ หวยย้อนหลัง20ปี ที่ Masurebet เว็บหวยออนไลน์ อันดับหนึ่ง คือ การนำค่าดัชนี ที่มีตัวเลขนำมาออกผล ในหวยนั้นๆ เช่น นำค่า Set ",
+  "description": "หวยหุ้น 10 คู่ วันนี้ ล่าสุด 2564 ชุดเลข เท่ากับ หวยหุ้น 10 คู่ วันนี้ ล่าสุด 2564 Huay Happy หวยแฮปปี้ หวยออนไลน์ มีหวยทุกชนิด 3 ตัว พร้อมจับหมุนไปกลับได้",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "หวยย้อนหลัง20ปี",
-    "หวยย้อนหลัง20ปี Masurebet"
-  ],
+  "keywords": ["หวยหุ้น 10 คู่ วันนี้ ล่าสุด 2564","หวยหุ้น","10","คู่","วันนี้","ล่าสุด","2564","หวยหุ้น Huay Happy","10 Huay Happy","คู่ Huay Happy","วันนี้ Huay Happy","ล่าสุด Huay Happy","2564 Huay Happy"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
