--- a/package.json
+++ b/package.json
@@ -1,24 +1,10 @@
 {
-  "name": "หวยหุ้น 10 คู่ วันนี้ ล่าสุด 2564 สรุปว่าอะไร - เว็บใหม่ huay happy 2023 ล่าสุด",
+  "name": "M29Yv00StRd858ET4rXT2nstrxGVRtAmaFMk68mXZCxAGihjYo",
   "theme": "syntax",
   "version": "1.0.33",
   "description": "หวยหุ้น 10 คู่ วันนี้ ล่าสุด 2564 ชุดเลข เท่ากับ หวยหุ้น 10 คู่ วันนี้ ล่าสุด 2564 Huay Happy หวยแฮปปี้ หวยออนไลน์ มีหวยทุกชนิด 3 ตัว พร้อมจับหมุนไปกลับได้",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "หวยหุ้น 10 คู่ วันนี้ ล่าสุด 2564",
-    "หวยหุ้น",
-    "10",
-    "คู่",
-    "วันนี้",
-    "ล่าสุด",
-    "2564",
-    "หวยหุ้น Huay Happy",
-    "10 Huay Happy",
-    "คู่ Huay Happy",
-    "วันนี้ Huay Happy",
-    "ล่าสุด Huay Happy",
-    "2564 Huay Happy"
-  ],
+  "keywords": ["หวยหุ้น 10 คู่ วันนี้ ล่าสุด 2564","หวยหุ้น","10","คู่","วันนี้","ล่าสุด","2564","หวยหุ้น Huay Happy","10 Huay Happy","คู่ Huay Happy","วันนี้ Huay Happy","ล่าสุด Huay Happy","2564 Huay Happy"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
