--- a/package.json
+++ b/package.json
@@ -1,24 +1,10 @@
 {
-  "name": "หวยหุ้น 10 คู่ วันนี้ ล่าสุด 2564 สรุปว่าอะไร - เว็บใหม่ huay happy 2023 ล่าสุด",
+  "name": "0ya4VXmJs3WwEVuDRaMm1smLh4ZWSXFDpEyVyjuYt6kMDRuN7c",
   "theme": "syntax",
   "version": "1.0.34",
-  "description": "หวยหุ้น 10 คู่ วันนี้ ล่าสุด 2564 ชุดเลข เท่ากับ หวยหุ้น 10 คู่ วันนี้ ล่าสุด 2564 Huay Happy หวยแฮปปี้ หวยออนไลน์ มีหวยทุกชนิด 3 ตัว พร้อมจับหมุนไปกลับได้",
+  "description": "รูเล็ต เว็บไหนดี ข้อดีของเว็บAw8ไม่ว่าจะเป็นสมาชิกเก่าหรือสมาชิกใหม่ แม้ รูเล็ต เว็บไหนดี Lynsbobet เว็บพนันออนไลน์ อันดับหนึ่ง ทางเว็บเราก็พร้อมยินดีที่จะ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "หวยหุ้น 10 คู่ วันนี้ ล่าสุด 2564",
-    "หวยหุ้น",
-    "10",
-    "คู่",
-    "วันนี้",
-    "ล่าสุด",
-    "2564",
-    "หวยหุ้น Huay Happy",
-    "10 Huay Happy",
-    "คู่ Huay Happy",
-    "วันนี้ Huay Happy",
-    "ล่าสุด Huay Happy",
-    "2564 Huay Happy"
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
