--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "รูเล็ต เว็บไหนดี สมัครยังไง - เว็บใหม่ lynsbobet 2023 ล่าสุด",
+  "name": "L1bYLA4ixIAASmwh6UpfkWAwEr4ZCVmE3k2bXD5NQSX9Yhlfd3",
   "theme": "syntax",
   "version": "1.0.37",
-  "description": "รูเล็ต เว็บไหนดี ข้อดีของเว็บAw8ไม่ว่าจะเป็นสมาชิกเก่าหรือสมาชิกใหม่ แม้ รูเล็ต เว็บไหนดี Lynsbobet เว็บพนันออนไลน์ อันดับหนึ่ง ทางเว็บเราก็พร้อมยินดีที่จะ",
+  "description": "บริการ ค่า สิ โน ออนไลน์ • ทว่า บริการ ค่า สิ โน ออนไลน์ Vwin เว็บพนันออนไลน์ อันดับหนึ่ง เลือกเดิมพัน ตำแหน่งเสมอ บริการ ค่า สิ โน ออนไลน์ เว็บจ่ายให้คุณท",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    null
-  ],
+  "keywords": ["บริการ ค่า สิ โน ออนไลน์","บริการ","ค่า","สิ","โน","ออนไลน์","บริการ Vwin","ค่า Vwin","สิ Vwin","โน Vwin","ออนไลน์ Vwin"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
