--- a/package.json
+++ b/package.json
@@ -1,22 +1,10 @@
 {
-  "name": "บริการ ค่า สิ โน ออนไลน์ ทำไมถึงนิยม - เว็บใหม่ vwin 2023 ล่าสุด",
+  "name": "V83xlTJ2JINbhvamd3lwHP5hdAarx62tfTzIvSl33uTDv3y1oA",
   "theme": "syntax",
   "version": "1.0.38",
-  "description": "บริการ ค่า สิ โน ออนไลน์ • ทว่า บริการ ค่า สิ โน ออนไลน์ Vwin เว็บพนันออนไลน์ อันดับหนึ่ง เลือกเดิมพัน ตำแหน่งเสมอ บริการ ค่า สิ โน ออนไลน์ เว็บจ่ายให้คุณท",
+  "description": "ยิงปลา999 รีวิวเกมสล็อต อย่างไรก็ดี ยิงปลา999 ที่ 11Hilo เว็บพนัน อันดับหนึ่ง Legendary Monkey King และ Destiny Of Sun Moon เกมมาใหม่ล่าสุดจากค่าย Pg Slot ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "บริการ ค่า สิ โน ออนไลน์",
-    "บริการ",
-    "ค่า",
-    "สิ",
-    "โน",
-    "ออนไลน์",
-    "บริการ Vwin",
-    "ค่า Vwin",
-    "สิ Vwin",
-    "โน Vwin",
-    "ออนไลน์ Vwin"
-  ],
+  "keywords": ["ยิงปลา999","ยิงปลา999 11Hilo"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
