--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "ยิงปลา999 เล่นยังไง - เว็บใหม่ 11hilo 2023 ล่าสุด-",
+  "name": "TRaYypAnFcTwxdLd5wkNjy5dnmkACegySbpfPtHWqOIwHuGCbu",
   "theme": "syntax",
   "version": "1.0.39",
-  "description": "ยิงปลา999 รีวิวเกมสล็อต อย่างไรก็ดี ยิงปลา999 ที่ 11Hilo เว็บพนัน อันดับหนึ่ง Legendary Monkey King และ Destiny Of Sun Moon เกมมาใหม่ล่าสุดจากค่าย Pg Slot ",
+  "description": "หวยหุ้นไต้หวัน คือ สวัสดีครับชาวหวยหุ้นช่อง9ทุกท่าน แม้น หวยหุ้นไต้หวัน คือ Huay999 หวยออนไลน์ อันดับหนึ่ง หวยหุ้นไต้หวัน คือ วันนี้ผมได้รวบรวมเอาหัวข้อดัง",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "ยิงปลา999",
-    "ยิงปลา999 11Hilo"
-  ],
+  "keywords": ["หวยหุ้นไต้หวัน คือ","หวยหุ้นไต้หวัน","คือ","หวยหุ้นไต้หวัน Huay999","คือ Huay999"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
