--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "TRaYypAnFcTwxdLd5wkNjy5dnmkACegySbpfPtHWqOIwHuGCbu",
+  "name": "หวยหุ้นไต้หวัน คือ ดูยังไง - เว็บใหม่ huay999 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.39",
   "description": "หวยหุ้นไต้หวัน คือ สวัสดีครับชาวหวยหุ้นช่อง9ทุกท่าน แม้น หวยหุ้นไต้หวัน คือ Huay999 หวยออนไลน์ อันดับหนึ่ง หวยหุ้นไต้หวัน คือ วันนี้ผมได้รวบรวมเอาหัวข้อดัง",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["หวยหุ้นไต้หวัน คือ","หวยหุ้นไต้หวัน","คือ","หวยหุ้นไต้หวัน Huay999","คือ Huay999"],
+  "keywords": [
+    "หวยหุ้นไต้หวัน คือ",
+    "หวยหุ้นไต้หวัน",
+    "คือ",
+    "หวยหุ้นไต้หวัน Huay999",
+    "คือ Huay999"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
