--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "หวยหุ้นไต้หวัน คือ ดูยังไง - เว็บใหม่ huay999 2023 ล่าสุด",
+  "name": "nYNEZKHhTKt5pjSNcAR7jjBwzZZLc6qnf0SDwvChOakFYiMI0J",
   "theme": "syntax",
   "version": "1.0.40",
-  "description": "หวยหุ้นไต้หวัน คือ สวัสดีครับชาวหวยหุ้นช่อง9ทุกท่าน แม้น หวยหุ้นไต้หวัน คือ Huay999 หวยออนไลน์ อันดับหนึ่ง หวยหุ้นไต้หวัน คือ วันนี้ผมได้รวบรวมเอาหัวข้อดัง",
+  "description": "ตรวจหวย 16 สิงหาคม 65 เลขเด็ด เนื่องด้วย ตรวจหวย 16 สิงหาคม 65 ที่ Lotto เว็บหวยออนไลน์ อันดับหนึ่ง เลขดัง แม่น้ำหนึ่ง  ตรวจหวย 16 สิงหาคม 65 หวยฮานอย งวดว",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "หวยหุ้นไต้หวัน คือ",
-    "หวยหุ้นไต้หวัน",
-    "คือ",
-    "หวยหุ้นไต้หวัน Huay999",
-    "คือ Huay999"
-  ],
+  "keywords": ["ตรวจหวย 16 สิงหาคม 65","ตรวจหวย","16","สิงหาคม","65","ตรวจหวย Lotto","16 Lotto","สิงหาคม Lotto","65 Lotto"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
