--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
-  "name": "nYNEZKHhTKt5pjSNcAR7jjBwzZZLc6qnf0SDwvChOakFYiMI0J",
+  "name": "ตรวจหวย 16 สิงหาคม 65 ได้อย่างไร - เว็บใหม่ lotto 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.40",
   "description": "ตรวจหวย 16 สิงหาคม 65 เลขเด็ด เนื่องด้วย ตรวจหวย 16 สิงหาคม 65 ที่ Lotto เว็บหวยออนไลน์ อันดับหนึ่ง เลขดัง แม่น้ำหนึ่ง  ตรวจหวย 16 สิงหาคม 65 หวยฮานอย งวดว",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["ตรวจหวย 16 สิงหาคม 65","ตรวจหวย","16","สิงหาคม","65","ตรวจหวย Lotto","16 Lotto","สิงหาคม Lotto","65 Lotto"],
+  "keywords": [
+    "ตรวจหวย 16 สิงหาคม 65",
+    "ตรวจหวย",
+    "16",
+    "สิงหาคม",
+    "65",
+    "ตรวจหวย Lotto",
+    "16 Lotto",
+    "สิงหาคม Lotto",
+    "65 Lotto"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
