--- a/package.json
+++ b/package.json
@@ -1,20 +1,10 @@
 {
-  "name": "ตรวจหวย 16 สิงหาคม 65 ได้อย่างไร - เว็บใหม่ lotto 2023 ล่าสุด",
+  "name": "nYNEZKHhTKt5pjSNcAR7jjBwzZZLc6qnf0SDwvChOakFYiMI0J",
   "theme": "syntax",
   "version": "1.0.41",
-  "description": "ตรวจหวย 16 สิงหาคม 65 เลขเด็ด เนื่องด้วย ตรวจหวย 16 สิงหาคม 65 ที่ Lotto เว็บหวยออนไลน์ อันดับหนึ่ง เลขดัง แม่น้ำหนึ่ง  ตรวจหวย 16 สิงหาคม 65 หวยฮานอย งวดว",
+  "description": "หวยมาเลย์เล่นยังไง ขั้นตอนที่ หวยมาเลย์เล่นยังไง ตั้งแต่ หวยมาเลย์เล่นยังไง Thailotto หวยออนไลน์ อันดับหนึ่ง 7 สามารถตรวจสอบโพยของท่านได้ที่เมนู โพยของฉัน",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "ตรวจหวย 16 สิงหาคม 65",
-    "ตรวจหวย",
-    "16",
-    "สิงหาคม",
-    "65",
-    "ตรวจหวย Lotto",
-    "16 Lotto",
-    "สิงหาคม Lotto",
-    "65 Lotto"
-  ],
+  "keywords": ["หวยมาเลย์เล่นยังไง","หวยมาเลย์เล่นยังไง Thailotto"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
