--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "nYNEZKHhTKt5pjSNcAR7jjBwzZZLc6qnf0SDwvChOakFYiMI0J",
+  "name": "หวยมาเลย์เล่นยังไง คืออะไร - เว็บใหม่ thailotto 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.41",
   "description": "หวยมาเลย์เล่นยังไง ขั้นตอนที่ หวยมาเลย์เล่นยังไง ตั้งแต่ หวยมาเลย์เล่นยังไง Thailotto หวยออนไลน์ อันดับหนึ่ง 7 สามารถตรวจสอบโพยของท่านได้ที่เมนู โพยของฉัน",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["หวยมาเลย์เล่นยังไง","หวยมาเลย์เล่นยังไง Thailotto"],
+  "keywords": [
+    "หวยมาเลย์เล่นยังไง",
+    "หวยมาเลย์เล่นยังไง Thailotto"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
