--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "หวยมาเลย์เล่นยังไง คืออะไร - เว็บใหม่ thailotto 2023 ล่าสุด",
+  "name": "N18bsYh9n9CsMYoCfqmiXb0MRe7kiF3HSkIhibr821t4rS0ws7",
   "theme": "syntax",
   "version": "1.0.43",
-  "description": "หวยมาเลย์เล่นยังไง ขั้นตอนที่ หวยมาเลย์เล่นยังไง ตั้งแต่ หวยมาเลย์เล่นยังไง Thailotto หวยออนไลน์ อันดับหนึ่ง 7 สามารถตรวจสอบโพยของท่านได้ที่เมนู โพยของฉัน",
+  "description": "ตรวจหวย 1 มิถุนายน 65 เลขเด็ดงวดนี้ สู่ ตรวจหวย 1 มิถุนายน 65 ที่ Choke เว็บหวยออนไลน์ อันดับหนึ่ง ประจำวันที่ 16 สิงหาคม ตรวจหวย 1 มิถุนายน 65 2566 เว็บไซ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "หวยมาเลย์เล่นยังไง",
-    "หวยมาเลย์เล่นยังไง Thailotto"
-  ],
+  "keywords": ["ตรวจหวย 1 มิถุนายน 65","ตรวจหวย","1","มิถุนายน","65","ตรวจหวย Choke","1 Choke","มิถุนายน Choke","65 Choke"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
