Renaming BRtFVj540AUgFsW2uKQ9qdRwsZ2Jq9BxJcvSpniT8pksFW258I to ตรวจหวย 1 มิถุนายน 65 ดูที่ไหน - เว็บใหม่ choke 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
-  "name": "BRtFVj540AUgFsW2uKQ9qdRwsZ2Jq9BxJcvSpniT8pksFW258I",
+  "name": "ตรวจหวย 1 มิถุนายน 65 ดูที่ไหน - เว็บใหม่ choke 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.44",
   "description": "ตรวจหวย 1 มิถุนายน 65 เลขเด็ดงวดนี้ สู่ ตรวจหวย 1 มิถุนายน 65 ที่ Choke เว็บหวยออนไลน์ อันดับหนึ่ง ประจำวันที่ 16 สิงหาคม ตรวจหวย 1 มิถุนายน 65 2566 เว็บไซ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["ตรวจหวย 1 มิถุนายน 65","ตรวจหวย","1","มิถุนายน","65","ตรวจหวย Choke","1 Choke","มิถุนายน Choke","65 Choke"],
+  "keywords": [
+    "ตรวจหวย 1 มิถุนายน 65",
+    "ตรวจหวย",
+    "1",
+    "มิถุนายน",
+    "65",
+    "ตรวจหวย Choke",
+    "1 Choke",
+    "มิถุนายน Choke",
+    "65 Choke"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
