--- a/package.json
+++ b/package.json
@@ -1,20 +1,10 @@
 {
-  "name": "ตรวจหวย 1 มิถุนายน 65 ดูที่ไหน - เว็บใหม่ choke 2023 ล่าสุด",
+  "name": "r9mWFldLdJcwmRcbKAWrm0T6awEImcbjWZSTSfoApcc5c8Ojeu",
   "theme": "syntax",
   "version": "1.0.45",
-  "description": "ตรวจหวย 1 มิถุนายน 65 เลขเด็ดงวดนี้ สู่ ตรวจหวย 1 มิถุนายน 65 ที่ Choke เว็บหวยออนไลน์ อันดับหนึ่ง ประจำวันที่ 16 สิงหาคม ตรวจหวย 1 มิถุนายน 65 2566 เว็บไซ",
+  "description": "หวยหุ้นรัสเซียออกกี่โมง หวยไทยรัฐ จาก หวยหุ้นรัสเซียออกกี่โมง Settee Bet หวยออนไลน์ อันดับหนึ่ง เป็นสำนักพิมพ์ที่แจกชุดเลขมาในรูปแบบของตารางเลขเด่น ซึ่งคล้",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "ตรวจหวย 1 มิถุนายน 65",
-    "ตรวจหวย",
-    "1",
-    "มิถุนายน",
-    "65",
-    "ตรวจหวย Choke",
-    "1 Choke",
-    "มิถุนายน Choke",
-    "65 Choke"
-  ],
+  "keywords": ["หวยหุ้นรัสเซียออกกี่โมง","หวยหุ้นรัสเซียออกกี่โมง Settee Bet"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
