--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "AcbhJrEvDmtQPt8LIuBe0imk8Af9DFmdSrL2D0fv9JV8yz1MdV",
+  "name": "หวยหุ้นรัสเซียออกกี่โมง ทำไมถึงนิยม - เว็บใหม่ settee bet 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.46",
   "description": "หวยหุ้นรัสเซียออกกี่โมง หวยไทยรัฐ จาก หวยหุ้นรัสเซียออกกี่โมง Settee Bet หวยออนไลน์ อันดับหนึ่ง เป็นสำนักพิมพ์ที่แจกชุดเลขมาในรูปแบบของตารางเลขเด่น ซึ่งคล้",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["หวยหุ้นรัสเซียออกกี่โมง","หวยหุ้นรัสเซียออกกี่โมง Settee Bet"],
+  "keywords": [
+    "หวยหุ้นรัสเซียออกกี่โมง",
+    "หวยหุ้นรัสเซียออกกี่โมง Settee Bet"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
