--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "หวยหุ้นรัสเซียออกกี่โมง ทำไมถึงนิยม - เว็บใหม่ settee bet 2023 ล่าสุด",
+  "name": "TzlEgzIxINUGRTvpmOJQS4ATQoMWFZdKaxI1r4IzJPn7IxXere",
   "theme": "syntax",
   "version": "1.0.47",
-  "description": "หวยหุ้นรัสเซียออกกี่โมง หวยไทยรัฐ จาก หวยหุ้นรัสเซียออกกี่โมง Settee Bet หวยออนไลน์ อันดับหนึ่ง เป็นสำนักพิมพ์ที่แจกชุดเลขมาในรูปแบบของตารางเลขเด่น ซึ่งคล้",
+  "description": "Dragon slot ค่ายเกม เนื่องด้วย Dragon slot ที่ Nova88 เว็บพนัน อันดับหนึ่ง Pg หรือ Pocket Game Solf เป็นค่ายเกมที่ได้รับความนิยมและเป็นค่ายเกมสล็อตที่ให้บร",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "หวยหุ้นรัสเซียออกกี่โมง",
-    "หวยหุ้นรัสเซียออกกี่โมง Settee Bet"
-  ],
+  "keywords": [null],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
