--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "dragon slot เล่นยังไง - เว็บใหม่ nova88 2023 ล่าสุด",
+  "name": "ZV444wQsQEtrDadvAOn4fPpkxrAxLlwB6VMvSYEXu24wDZb8Ym",
   "theme": "syntax",
   "version": "1.0.48",
-  "description": "Dragon slot ค่ายเกม เนื่องด้วย Dragon slot ที่ Nova88 เว็บพนัน อันดับหนึ่ง Pg หรือ Pocket Game Solf เป็นค่ายเกมที่ได้รับความนิยมและเป็นค่ายเกมสล็อตที่ให้บร",
+  "description": "M89 สวัสดีผู้ติดตาม แต่ M89 ที่ 123Play เว็บพนัน อันดับหนึ่ง Stakehow ทุกท่าน บทความนี้ผมก็จะมาแนะนำ เว็บพนัน ออนไลน์ ที่ได้มาตรฐานและมีจำนวนสมาชิกเยอะที่ส",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    null
-  ],
+  "keywords": ["M89","M89 123Play"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
