--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "OqrS0jiT3p8ZWcnAg9zzJs5aNJ73fHZqsNAMI8e1ttNl5fO6l7",
+  "name": "m89 สมัครยังไง - เว็บใหม่ 123play 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.49",
   "description": "M89 สวัสดีผู้ติดตาม แต่ M89 ที่ 123Play เว็บพนัน อันดับหนึ่ง Stakehow ทุกท่าน บทความนี้ผมก็จะมาแนะนำ เว็บพนัน ออนไลน์ ที่ได้มาตรฐานและมีจำนวนสมาชิกเยอะที่ส",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["M89","M89 123Play"],
+  "keywords": [
+    "M89",
+    "M89 123Play"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
