--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "m89 สมัครยังไง - เว็บใหม่ 123play 2023 ล่าสุด",
+  "name": "8UTyiT9smJM7LbTxIflPHPTssDrDO9msodQ6VPsspIH2DWHtIw",
   "theme": "syntax",
   "version": "1.0.51",
-  "description": "M89 สวัสดีผู้ติดตาม แต่ M89 ที่ 123Play เว็บพนัน อันดับหนึ่ง Stakehow ทุกท่าน บทความนี้ผมก็จะมาแนะนำ เว็บพนัน ออนไลน์ ที่ได้มาตรฐานและมีจำนวนสมาชิกเยอะที่ส",
+  "description": "เกมสล็อตมาแรง เว็บตรงกับเว็บเอเย่นต์แตกต่างยังไง เว้นแต่ เกมสล็อตมาแรง UFA365 เว็บพนันออนไลน์ อันดับหนึ่ง ไม่มีอย่างต่ำ ทุกเกมเล่นง่าย เลือกเล่นได้ทุกเกม ไ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "M89",
-    "M89 123Play"
-  ],
+  "keywords": ["เกมสล็อตมาแรง","เกมสล็อตมาแรง UFA365"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
