--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "8UTyiT9smJM7LbTxIflPHPTssDrDO9msodQ6VPsspIH2DWHtIw",
+  "name": "เกมสล็อตมาแรง ได้อย่างไร - เว็บใหม่ ufa365 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.51",
   "description": "เกมสล็อตมาแรง เว็บตรงกับเว็บเอเย่นต์แตกต่างยังไง เว้นแต่ เกมสล็อตมาแรง UFA365 เว็บพนันออนไลน์ อันดับหนึ่ง ไม่มีอย่างต่ำ ทุกเกมเล่นง่าย เลือกเล่นได้ทุกเกม ไ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["เกมสล็อตมาแรง","เกมสล็อตมาแรง UFA365"],
+  "keywords": [
+    "เกมสล็อตมาแรง",
+    "เกมสล็อตมาแรง UFA365"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
