--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "เกมสล็อตมาแรง ได้อย่างไร - เว็บใหม่ ufa365 2023 ล่าสุด",
+  "name": "IScDuV3oQTWPmfzYgtmV2vNqnF6dcPYUjmTL9XIFwzLYxxii8m",
   "theme": "syntax",
   "version": "1.0.52",
   "description": "เกมสล็อตมาแรง เว็บตรงกับเว็บเอเย่นต์แตกต่างยังไง เว้นแต่ เกมสล็อตมาแรง UFA365 เว็บพนันออนไลน์ อันดับหนึ่ง ไม่มีอย่างต่ำ ทุกเกมเล่นง่าย เลือกเล่นได้ทุกเกม ไ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "เกมสล็อตมาแรง",
-    "เกมสล็อตมาแรง UFA365"
-  ],
+  "keywords": ["เกมสล็อตมาแรง","เกมสล็อตมาแรง UFA365"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
