--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "เกมสล็อตมาแรง ได้อย่างไร - เว็บใหม่ ufa365 2023 ล่าสุด",
+  "name": "VbA55f6zgmCVhjq8aDjFH9g5bmTwLDMNsfW6Z57sqvxvUw3a2E",
   "theme": "syntax",
   "version": "1.0.53",
-  "description": "เกมสล็อตมาแรง เว็บตรงกับเว็บเอเย่นต์แตกต่างยังไง เว้นแต่ เกมสล็อตมาแรง UFA365 เว็บพนันออนไลน์ อันดับหนึ่ง ไม่มีอย่างต่ำ ทุกเกมเล่นง่าย เลือกเล่นได้ทุกเกม ไ",
+  "description": "ฮานอยvipย้อนหลัง เลข โดย ฮานอยvipย้อนหลัง Thailotto ไทยล็อตโต้ หวยออนไลน์ มีหวยทุกชนิด 3 ตัว 714 715เลข 2 ฮานอยvipย้อนหลัง ตัว 27 28 25 26ขอให้สนุกกับการซื",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "เกมสล็อตมาแรง",
-    "เกมสล็อตมาแรง UFA365"
-  ],
+  "keywords": ["ฮานอยVIPย้อนหลัง","ฮานอยVIPย้อนหลัง Thailotto"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
