Renaming VbA55f6zgmCVhjq8aDjFH9g5bmTwLDMNsfW6Z57sqvxvUw3a2E to ฮานอยvipย้อนหลัง มีคำตอบ - เว็บใหม่ thailotto 2023 ล่าสุด

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "VbA55f6zgmCVhjq8aDjFH9g5bmTwLDMNsfW6Z57sqvxvUw3a2E",
+  "name": "ฮานอยvipย้อนหลัง มีคำตอบ - เว็บใหม่ thailotto 2023 ล่าสุด",
   "theme": "syntax",
   "version": "1.0.53",
   "description": "ฮานอยvipย้อนหลัง เลข โดย ฮานอยvipย้อนหลัง Thailotto ไทยล็อตโต้ หวยออนไลน์ มีหวยทุกชนิด 3 ตัว 714 715เลข 2 ฮานอยvipย้อนหลัง ตัว 27 28 25 26ขอให้สนุกกับการซื",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["ฮานอยVIPย้อนหลัง","ฮานอยVIPย้อนหลัง Thailotto"],
+  "keywords": [
+    "ฮานอยVIPย้อนหลัง",
+    "ฮานอยVIPย้อนหลัง Thailotto"
+  ],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
