--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "ฮานอยvipย้อนหลัง มีคำตอบ - เว็บใหม่ thailotto 2023 ล่าสุด",
+  "name": "siW3SO6pY9aAZrb9YuL1AnpKDat0I0gMaBaFv9zijk7C2d9BlS",
   "theme": "syntax",
   "version": "1.0.54",
-  "description": "ฮานอยvipย้อนหลัง เลข โดย ฮานอยvipย้อนหลัง Thailotto ไทยล็อตโต้ หวยออนไลน์ มีหวยทุกชนิด 3 ตัว 714 715เลข 2 ฮานอยvipย้อนหลัง ตัว 27 28 25 26ขอให้สนุกกับการซื",
+  "description": "หวยฮานอยวันนี้ ออกอะไร vip ชุดเลขให้โชคลาภงวดนี้ เนื่องจาก หวยฮานอยวันนี้ ออกอะไร vip ที่ Uwin789 เว็บหวยออนไลน์ อันดับหนึ่ง ได้แก่24-4225-5229-9245-5449-9",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": [
-    "ฮานอยVIPย้อนหลัง",
-    "ฮานอยVIPย้อนหลัง Thailotto"
-  ],
+  "keywords": ["หวยฮานอยวันนี้ ออกอะไร VIP","หวยฮานอยวันนี้","ออกอะไร","VIP","หวยฮานอยวันนี้ Uwin789","ออกอะไร Uwin789","VIP Uwin789"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
