--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "siW3SO6pY9aAZrb9YuL1AnpKDat0I0gMaBaFv9zijk7C2d9BlS",
   "theme": "syntax",
   "version": "1.0.54",
-  "description": "หวยฮานอยวันนี้ ออกอะไร vip ชุดเลขให้โชคลาภงวดนี้ เนื่องจาก หวยฮานอยวันนี้ ออกอะไร vip ที่ Uwin789 เว็บหวยออนไลน์ อันดับหนึ่ง ได้แก่24-4225-5229-9245-5449-9",
+  "description": "สถิติหวยฮานอยย้อนหลัง2564 ชุดเลข ต่อ สถิติหวยฮานอยย้อนหลัง2564 Kerry899 หวยออนไลน์ อันดับหนึ่ง 3 ตัว ได้แก่407-470-074-047-704-740427-472-274-247-742-724ชุ",
   "repository": "https://github.com/gullibles-02/overdoor-12",
-  "keywords": ["หวยฮานอยวันนี้ ออกอะไร VIP","หวยฮานอยวันนี้","ออกอะไร","VIP","หวยฮานอยวันนี้ Uwin789","ออกอะไร Uwin789","VIP Uwin789"],
+  "keywords": ["สถิติหวยฮานอยย้อนหลัง2564","สถิติหวยฮานอยย้อนหลัง2564 Kerry899"],
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
